really thos time. fixed spacing of alternate heading

--- a/site/two/css/css.css
+++ b/site/two/css/css.css
@@ -16,6 +16,7 @@ h2 {
   margin-bottom: 15px;
   font-size: 1.5em;
   visibility: hidden;
+  padding-left:15px;
 }
 
 p {
@@ -28,6 +29,7 @@ p {
   height: 200px;
   position: relative;
   color: black;
+  padding-top: 18px;
   padding-left: 5px;
   margin-right: 10px;
   margin-bottom: 10px;
